--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,7 @@
 {
     "require": {
-        "bramus/router": "^1.6"
+        "bramus/router": "^1.6",
+        "rpurinton/gemini-php": "^0.1.5",
+        "erusev/parsedown": "^1.7"
     }
 }
