--- a/composer.json
+++ b/composer.json
@@ -2,6 +2,7 @@
     "require": {
         "bramus/router": "^1.6",
         "rpurinton/gemini-php": "^0.1.5",
-        "erusev/parsedown": "^1.7"
+        "erusev/parsedown": "^1.7",
+        "enyo/dropzone": "^5.9"
     }
 }
