--- a/composer.json
+++ b/composer.json
@@ -4,5 +4,13 @@
         "rpurinton/gemini-php": "^0.1.5",
         "erusev/parsedown": "^1.7",
         "enyo/dropzone": "^5.9"
+    },
+    "require-dev": {
+        "phpunit/phpunit": "^11.0"
+    },
+    "autoload": {
+        "classmap": [
+            "app/"
+        ]
     }
 }
