--- a/composer.json
+++ b/composer.json
@@ -6,7 +6,8 @@
         "enyo/dropzone": "^5.9"
     },
     "require-dev": {
-        "phpunit/phpunit": "^11.0"
+        "phpunit/phpunit": "^11.0",
+        "phpunit/php-code-coverage": "^11.0"
     },
     "autoload": {
         "classmap": [
